<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingActivity">

    <item
        android:id="@+id/actionViewLayout"
        android:orderInCategory="80"
        android:title="@string/edit"
        app:actionLayout="@layout/menu_item"
        app:showAsAction="always" />


    <item
        android:id="@+id/share_"
        android:icon="@mipmap/share"
        android:orderInCategory="80"
        android:title="@string/edit"
        app:actionLayout="@layout/menu_imageview"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_wx"
        android:drawableLeft="@mipmap/share_wx"
        android:orderInCategory="80"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/share_xina"
        android:drawableLeft="@mipmap/share_xina"
        android:orderInCategory="80"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/edit"
        android:icon="@mipmap/edit"
        android:orderInCategory="80"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/delete"
        android:icon="@mipmap/delete"
        android:orderInCategory="90"
        android:title="@string/delete"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/share"
        android:icon="@mipmap/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never|withText" />
</menu>